[package]
name = "epubsearch"
version = "0.1.0"
authors = ["sam-barr <mail@samf.bar>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "*"
xml-rs = "*"
percent-encoding = "*"
regex = "*"
argh = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
